--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint hobom-internal",
+    "lint": "eslint",
     "preview": "vite preview"
   },
   "dependencies": {
