--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint",
+    "format": "prettier . --write",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,7 +17,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.4.0",
     "@tanstack/react-query": "^5.77.1",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
@@ -24,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.21",
+    "@vitest/eslint-plugin": "^1.1.38",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -34,6 +39,8 @@
     "prettier": "^3.4.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "type-fest": "^4.39.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.0.7"
   }
 }
