[hb-frntend/kan-66]

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_HOBOM_API_GATEWAY_URL="http://localhost:8081/hobom-api-gateway"
+VITE_APP_HOBOM_API_GATEWAY_URL="http://localhost:8081/hobom-api-gateway/hobom-system-backend"
