[KAN-78] change complete status

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -27,6 +27,9 @@ jobs:
         env:
           ROLLUP_NO_NATIVE: true
 
+      - name: Run test
+        run: npm run test
+
       - name: Run build
         run: npm run build
         env:
